<resources>
    <string name="app_name">AssignmentSpringCT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember">Remember</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="note1">Note : Update and Submit not possible because you not provide API of post and put</string>
</resources>